--- a/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
+++ b/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
@@ -7,129 +7,133 @@
 </head>
 <body>
 <div class="content">
-A randomized list of reserved comic book trade titles - 11/10/2021 06:00<br>
+A randomized list of reserved comic book trade titles - 11/11/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-118 books<br>
+122 books<br>
  <br>
-Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
-Civil War II - 9H 12M<br>
-Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
-Uncanny X-force vol 2 - 12H 42M<br>
-Batman Damned - 5H 28M<br>
-Despicable Deadpool vol 2 - 3H 29M<br>
-Future State Wonder Woman - 6H 13M<br>
-Carnage vol 2 World Tour - 3H 29M<br>
-Suicide Squad vol 4 - 4H 28M<br>
-Batman 66 vol 2 - 5H 28M<br>
-Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
-Batman Li'l Gotham Vol. 1 - 8H 28M<br>
-White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
-Action Comics 1000 - 4H 58M<br>
-Green Lanterns vol 2 - 6H 28M<br>
-Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
-Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
-Saga vol 6 - 4H 43M<br>
-Lobo Portrait of a Bastich - 6H 28M<br>
-Transformers All Hail Megatron Volume 2 - 4H 43M<br>
-Iron Man 2020 Robot Revolution - 4H 14M<br>
-Deadpool too soon - 4H 14M<br>
-Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
-Uncanny X-force vol 1 - 16H 11M<br>
-Mister Miracle - 9H 57M<br>
-Eternals Vol. 1 Only Death is Eternal - 4H 58M<br>
-Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
-Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
-Deadpool v Gambit - 3H 29M<br>
-Transformers All Hail Megatron Volume 1 - 4H 43M<br>
-Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
-Pride of Baghdad - 4H 14M<br>
-Absolute Carnage - 6H 13M<br>
-Spider-Verse - 20H 10M<br>
-War Machine - Volume 1 Iron Heart - 4H 14M<br>
-Batwoman vol 1 - 5H 13M<br>
-Batman Eternal vol 1 - 14H 56M<br>
-Black Panther vol 1 - 4H 28M<br>
-Suicide Squad vol 5 - 6H 28M<br>
-Avengers vol 1 - 4H 58M<br>
-Justice League Dark Vol. 1 The Last Age of Magic - 4H 58M<br>
-Red Hood and the Outlaws vol 1 - 5H 13M<br>
-Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
-The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
-Daredevil by Waid Rivera Vol. 1 - 4H 43M<br>
-Batman Eternal vol 2 - 13H 56M<br>
-Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
-Batman The Doom That Came To Gotham - 5H 28M<br>
-Superman vol 4 - 5H 28M<br>
-Teen Titans by Geoff Johns Book One - 11H 27M<br>
-Lumberjanes - 4H 6M<br>
-Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
-Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
-Atomic Robo Everything Explodes - 11H 57M<br>
-Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
-Amazing Spider-Man Venom Inc - 4H 58M<br>
-Green Lanterns vol 4 - 3H 59M<br>
-Superman vol 3 - 4H 28M<br>
-Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
-Batman vol 9 - 4H 43M<br>
-DCeased - 6H 58M<br>
-Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
-Batman Knightfall Vol. 1 - 8H 43M<br>
-Sandman Omnibus vol 1 - 32H 22M<br>
-Batman Last Knight on Earth - 5H 43M<br>
 Saga vol 3 - 4H 28M<br>
-Spider-man Big Time vol 1 - 16H 11M<br>
-Umbrella Academy vol 1 - 5H 43M<br>
-Batman Arkham Asylum - 7H 13M<br>
-The Weatherman Volume 1 - 6H 13M<br>
-Detective Comics 1000 - 5H 28M<br>
-Super Sons vol 1 - 3H 59M<br>
-Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
-Spider-geddon - 6H 13M<br>
-Green Lanterns vol 3 - 5H 13M<br>
-Spawn Origins Volume 1 - 4H 58M<br>
-Darth Vader vol 4 - 5H 13M<br>
-Iron Man Extremis - 4H 58M<br>
-The Dark Knight Returns - 6H 58M<br>
-Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
-Deadpool Classic Killogy - 8H 43M<br>
-Darth Vader vol 3 - 3H 59M<br>
-Marvel Infinity - 18H 25M<br>
-Saga vol 5 - 4H 43M<br>
-Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
-Black Panther vol 2 - 4H 28M<br>
-Invincible Iron Man vol 1 - 4H 14M<br>
-Despicable Deadpool vol 3 - 3H 29M<br>
-Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
-X-men Gold vol 1 - 4H 28M<br>
-Umbrella Academy vol 2 - 5H 58M<br>
-Guardians of the galaxy vol 1 - 9H 12M<br>
-Infamous Iron Man vol 2 - 4H 14M<br>
-Batman 66 vol 3 - 5H 13M<br>
+Amazing Spider-Man Venom Inc - 4H 58M<br>
 Deadpool v Carnage - 3H 44M<br>
-Astonishing Spider-man & Wolverine - 5H 13M<br>
-How to Fall Forever (Black Science) - 4H 43M<br>
-Spider-man Spider Island - 11H 42M<br>
-Once & Future Vol. 1 - 4H 58M<br>
-Spider-gwen vol 2 - 3H 29M<br>
-Spawn Origins Volume 2 - 5H 43M<br>
-Superior Spider-man Necessary Evil - 3H 36M<br>
-Thor God of Thunder Reborn vol 1 - 4H 14M<br>
-Justice League Darkseid War - 11H 42M<br>
-Spider-man-Deadpool vol 3 - 4H 14M<br>
-Spider-gwen vol 3 - 3H 29M<br>
-Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
-Batman vol 8 - 5H 28M<br>
-Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
-Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
+Lobo Portrait of a Bastich - 6H 28M<br>
 Edge of Spider-geddon - 3H 44M<br>
-Saga vol 4 - 4H 28M<br>
-Atomic Robo Crystals are Integral - 13H 4M<br>
+Batman Damned - 5H 28M<br>
+Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
+Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
+Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
+X-men Gold vol 1 - 4H 28M<br>
+Superior Spider-man Necessary Evil - 3H 36M<br>
+Batman vol 9 - 4H 43M<br>
+Spider-man Spider Island - 11H 42M<br>
+Iron Man 2020 Robot Revolution - 4H 14M<br>
+Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
+Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
+Mister Miracle - 9H 57M<br>
+Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
+Iron Man Extremis - 4H 58M<br>
+Batwoman vol 1 - 5H 13M<br>
+War Machine - Volume 1 Iron Heart - 4H 14M<br>
+Action Comics 1000 - 4H 58M<br>
+Eternals Vol. 1 Only Death is Eternal - 4H 58M<br>
+White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
+Spider-Verse - 20H 10M<br>
+Transformers All Hail Megatron Volume 2 - 4H 43M<br>
+Justice League Darkseid War - 11H 42M<br>
+Black Panther vol 2 - 4H 28M<br>
+Spawn Origins Volume 1 - 4H 58M<br>
+Detective Comics 1000 - 5H 28M<br>
+Batman Last Knight on Earth - 5H 43M<br>
+Darth Vader vol 4 - 5H 13M<br>
+Atomic Robo Everything Explodes - 11H 57M<br>
+Spider-gwen vol 2 - 3H 29M<br>
+We Only Find Them When They're Dead Vol. 2 - 4H 28M<br>
+Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
+Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
+Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
 Thanos vol 1 - 4H 14M<br>
-Fantastic Four vol 1 - 4H 28M<br>
 Swamp Thing Bronze Age vol 1 - 9H 27M<br>
-Spider-man-Deadpool vol 2 - 3H 44M<br>
 Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
+Superman vol 4 - 5H 28M<br>
+Green Lanterns vol 3 - 5H 13M<br>
+Thor God of Thunder Reborn vol 1 - 4H 14M<br>
+Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
+Civil War II - 9H 12M<br>
+Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
+Batman Knightfall Vol. 1 - 8H 43M<br>
+DCeased - 6H 58M<br>
+Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
+Teen Titans by Geoff Johns Book One - 11H 27M<br>
+Spider-geddon - 6H 13M<br>
+Superman vol 3 - 4H 28M<br>
+Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
+Fantastic Four vol 1 - 4H 28M<br>
+Despicable Deadpool vol 3 - 3H 29M<br>
+Batman 66 vol 3 - 5H 13M<br>
+Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
+Suicide Squad vol 5 - 6H 28M<br>
+Daredevil by Waid Rivera Vol. 1 - 4H 43M<br>
+How to Fall Forever (Black Science) - 4H 43M<br>
+Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
+Astonishing Spider-man & Wolverine - 5H 13M<br>
+Death of Doctor Strange - 4H 14M<br>
+Sandman Omnibus vol 1 - 32H 22M<br>
+Atomic Robo Crystals are Integral - 13H 4M<br>
+Umbrella Academy vol 1 - 5H 43M<br>
+Darth Vader vol 3 - 3H 59M<br>
+Super Sons vol 1 - 3H 59M<br>
+Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
+Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
+Deadpool Classic Killogy - 8H 43M<br>
+Batman Li'l Gotham Vol. 1 - 8H 28M<br>
+Batman 66 vol 2 - 5H 28M<br>
+Despicable Deadpool vol 2 - 3H 29M<br>
+The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
+Deadpool v Gambit - 3H 29M<br>
+Carnage vol 2 World Tour - 3H 29M<br>
+Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
+Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
+Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
+Batman '89 - 4H 43M<br>
+Invincible Iron Man vol 1 - 4H 14M<br>
+The Weatherman Volume 1 - 6H 13M<br>
+Avengers vol 1 - 4H 58M<br>
+Red Hood and the Outlaws vol 1 - 5H 13M<br>
+Umbrella Academy vol 2 - 5H 58M<br>
+Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
+Uncanny X-force vol 1 - 16H 11M<br>
+Future State Wonder Woman - 6H 13M<br>
+Lumberjanes - 4H 6M<br>
+Justice League Dark Vol. 1 The Last Age of Magic - 4H 58M<br>
+Superman '78 - 4H 43M<br>
+Black Panther vol 1 - 4H 28M<br>
+Green Lanterns vol 4 - 3H 59M<br>
+Pride of Baghdad - 4H 14M<br>
+Uncanny X-force vol 2 - 12H 42M<br>
+Suicide Squad vol 4 - 4H 28M<br>
+Spider-man-Deadpool vol 2 - 3H 44M<br>
+Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
+Saga vol 4 - 4H 28M<br>
+Infamous Iron Man vol 2 - 4H 14M<br>
+Green Lanterns vol 2 - 6H 28M<br>
+Spider-gwen vol 3 - 3H 29M<br>
+Batman Arkham Asylum - 7H 13M<br>
+Marvel Infinity - 18H 25M<br>
+Once & Future Vol. 1 - 4H 58M<br>
+Batman Eternal vol 2 - 13H 56M<br>
+Spawn Origins Volume 2 - 5H 43M<br>
+Batman vol 8 - 5H 28M<br>
+Transformers All Hail Megatron Volume 1 - 4H 43M<br>
+The Dark Knight Returns - 6H 58M<br>
+Spider-man-Deadpool vol 3 - 4H 14M<br>
+Guardians of the galaxy vol 1 - 9H 12M<br>
+Batman The Doom That Came To Gotham - 5H 28M<br>
+Deadpool too soon - 4H 14M<br>
+Saga vol 5 - 4H 43M<br>
+Spider-man Big Time vol 1 - 16H 11M<br>
+Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
+Saga vol 6 - 4H 43M<br>
+Batman Eternal vol 1 - 14H 56M<br>
+Deadpool Dracula's Gauntlet - 6H 13M<br>
 -----------------------------------------------------<br>
  <br>
 Summary Report<br>
@@ -137,7 +141,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 140 books - 1809H 42M / 75D 9H 42M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 76 books - 715H 9M / 29D 19H 9M<br>
+Completed in 2021 - 77 books - 721H 22M / 30D 1H 22M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -148,7 +152,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 118 books - 742H 10M / 30D 22H 10M<br>
+Book Reserve - Comic Trades - 122 books - 760H 18M / 31D 16H 18M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
  <br>
@@ -158,20 +162,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 171 queued items: 2293H 30M / 95D 13H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.78% of reserve items are queued<br>
+20.68% of reserve items are queued<br>
  <br>
-All books included in this report: 1232 titles - 14586H 27M / 607D 18H 27M<br>
+All books included in this report: 1237 titles - 14610H 48M / 608D 18H 48M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 409 titles - 4492H 57M / 187D 4H 57M<br>
-Total remaining in queue and reserve: 823 titles - 10093H 29M / 420D 13H 29M<br>
-Average completed per year: 46.2 titles - 507H 16M / 21D 3H 16M<br>
-Remaining years of reserve material at average yearly pace: 17.8<br>
-Remaining years of reserve material at current year pace: 9.4<br>
+Total completed since 01/01/2013: 410 titles - 4499H 10M / 187D 11H 10M<br>
+Total remaining in queue and reserve: 827 titles - 10111H 37M / 421D 7H 37M<br>
+Average completed per year: 46.3 titles - 507H 49M / 21D 3H 49M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.3<br>
  <br>
-Total time to process all reports: 00:00:01.614 (1.614 seconds)<br>
-Total time including file writes: 00:00:01.614 (1.614 seconds)
+Total time to process all reports: 00:00:01.803 (1.803 seconds)<br>
+Total time including file writes: 00:00:01.803 (1.803 seconds)
 </div>
 </body>
 </html>
