--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,17 +7,18 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 11/10/2021 06:00<br>
+Completed books sorted by folder - 11/11/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 76 books - 715H 9M / 29D 19H 9M<br>
-Total Comic Trades : 30<br>
-Average book length : 9H 24M<br>
-Hours read per week : 15H 56M<br>
-On pace to complete 88 books (831H 51M / 34D 15H 51M) by the end of 2021<br>
+Completed in 2021 : 77 books - 721H 22M / 30D 1H 22M<br>
+Total Comic Trades : 31<br>
+Average book length : 9H 22M<br>
+Hours read per week : 16H 1M<br>
+On pace to complete 89 books (836H 25M / 34D 20H 25M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
+Absolute Carnage - 6H 13M<br>
 Age of Madness 1 - A Little Hatred - Joe Abercrombie - 20H 26M<br>
 Atomic Habits - James Clear - 5H 36M<br>
 Attack on Titan 29 - 5H 58M<br>
@@ -481,7 +482,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 140 books - 1809H 42M / 75D 9H 42M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 76 books - 715H 9M / 29D 19H 9M<br>
+Completed in 2021 - 77 books - 721H 22M / 30D 1H 22M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -492,7 +493,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 118 books - 742H 10M / 30D 22H 10M<br>
+Book Reserve - Comic Trades - 122 books - 760H 18M / 31D 16H 18M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
  <br>
@@ -502,20 +503,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 171 queued items: 2293H 30M / 95D 13H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.78% of reserve items are queued<br>
+20.68% of reserve items are queued<br>
  <br>
-All books included in this report: 1232 titles - 14586H 27M / 607D 18H 27M<br>
+All books included in this report: 1237 titles - 14610H 48M / 608D 18H 48M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 409 titles - 4492H 57M / 187D 4H 57M<br>
-Total remaining in queue and reserve: 823 titles - 10093H 29M / 420D 13H 29M<br>
-Average completed per year: 46.2 titles - 507H 16M / 21D 3H 16M<br>
-Remaining years of reserve material at average yearly pace: 17.8<br>
-Remaining years of reserve material at current year pace: 9.4<br>
+Total completed since 01/01/2013: 410 titles - 4499H 10M / 187D 11H 10M<br>
+Total remaining in queue and reserve: 827 titles - 10111H 37M / 421D 7H 37M<br>
+Average completed per year: 46.3 titles - 507H 49M / 21D 3H 49M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.3<br>
  <br>
-Total time to process all reports: 00:00:01.614 (1.614 seconds)<br>
-Total time including file writes: 00:00:01.614 (1.614 seconds)
+Total time to process all reports: 00:00:01.803 (1.803 seconds)<br>
+Total time including file writes: 00:00:01.803 (1.803 seconds)
 </div>
 </body>
 </html>
