--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 11/10/2021 06:00<br>
+Reserved books sorted by name - 11/11/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-823 books<br>
+827 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Book Reserve - Audiobooks)<br>
@@ -35,7 +35,6 @@ A Tale of Two Cities - Charles Dickens - 13H 41M (Book Reserve - Audiobooks)<br>
 A Time of Changes - Robert Silverberg - 7H 39M (Book Reserve - Audiobooks)<br>
 A Wrinkle in Time - Madelein L'Engle - 6H 6M (Book Reserve - Audiobooks)<br>
 ADHD 2.0 - Edward M. Hallowell - 5H 28M (Book Reserve - Audiobooks)<br>
-Absolute Carnage - 6H 13M (Book Reserve - Comic Trades)<br>
 Accelerate - The Science of Lean Software - Nicole Fosgren - 8H 57M (Book Reserve - Physical and Kindle Books)<br>
 Accessory to War - Neil DeGrasse Tyson - 18H 44M (Book Reserve - Audiobooks)<br>
 Accidental Presidents - Eight Men Who Changed America - Jared Cohen - 17H 2M (Book Reserve - Audiobooks)<br>
@@ -79,6 +78,7 @@ Aurora - Kim Stanley Robinson - 17H 0M (Book Reserve - Audiobooks)<br>
 Avengers vol 1 - 4H 58M (Book Reserve - Comic Trades)<br>
 Babel-17 - Samuel R. Delany - 9H 40M (Book Reserve - Physical and Kindle Books)<br>
 Baby Teeth - Zoje Stage - 11H 9M (Book Reserve - Audiobooks)<br>
+Batman '89 - 4H 43M (Book Reserve - Comic Trades)<br>
 Batman 66 vol 2 - 5H 28M (Book Reserve - Comic Trades)<br>
 Batman 66 vol 3 - 5H 13M (Book Reserve - Comic Trades)<br>
 Batman Arkham Asylum - 7H 13M (Book Reserve - Comic Trades)<br>
@@ -169,11 +169,13 @@ Darth Vader vol 3 - 3H 59M (Book Reserve - Comic Trades)<br>
 Darth Vader vol 4 - 5H 13M (Book Reserve - Comic Trades)<br>
 Dead Astronauts - Jeff VanderMeer - 7H 47M (Book Reserve - Audiobooks)<br>
 Deadpool Classic Killogy - 8H 43M (Book Reserve - Comic Trades)<br>
+Deadpool Dracula's Gauntlet - 6H 13M (Book Reserve - Comic Trades)<br>
 Deadpool too soon - 4H 14M (Book Reserve - Comic Trades)<br>
 Deadpool v Carnage - 3H 44M (Book Reserve - Comic Trades)<br>
 Deadpool v Gambit - 3H 29M (Book Reserve - Comic Trades)<br>
 Deadpool, Vol. 2 Dark Reign - 3H 44M (Book Reserve - Comic Trades)<br>
 Deadpool, Vol. 3 X Marks the Spot - 4H 28M (Book Reserve - Comic Trades)<br>
+Death of Doctor Strange - 4H 14M (Book Reserve - Comic Trades)<br>
 Democracy in One Book or Less - David Litt - 11H 54M (Queue - Current Audiobooks)<br>
 Desperation - Stephen King - 21H 23M (Book Reserve - Audiobooks)<br>
 Despicable Deadpool vol 2 - 3H 29M (Book Reserve - Comic Trades)<br>
@@ -538,6 +540,7 @@ Suicide Squad vol 4 - 4H 28M (Book Reserve - Comic Trades)<br>
 Suicide Squad vol 5 - 6H 28M (Book Reserve - Comic Trades)<br>
 Super Sons vol 1 - 3H 59M (Book Reserve - Comic Trades)<br>
 Superior Spider-man Necessary Evil - 3H 36M (Book Reserve - Comic Trades)<br>
+Superman '78 - 4H 43M (Book Reserve - Comic Trades)<br>
 Superman vol 3 - 4H 28M (Book Reserve - Comic Trades)<br>
 Superman vol 4 - 5H 28M (Book Reserve - Comic Trades)<br>
 Surviving Autocracy - Masha Gessen - 5H 46M (Book Reserve - Audiobooks)<br>
@@ -799,6 +802,7 @@ We - Yevgeny Zamyatin - 6H 53M (Queue - Current Audiobooks)<br>
 We Are Indivisible - Leah Greenberg - 8H 40M (Book Reserve - Audiobooks)<br>
 We Are Never Meeting in Real Life - Samantha Irby - 9H 20M (Book Reserve - Audiobooks)<br>
 We Have Always Lived in the Castle - Shirley Jackson - 5H 34M (Queue - Current Audiobooks)<br>
+We Only Find Them When They're Dead Vol. 2 - 4H 28M (Book Reserve - Comic Trades)<br>
 Weapons of Math Destruction - Cathy O'Neil - 6H 25M (Queue - Current Audiobooks)<br>
 What Makes a Marriage Last - Marlo Thomas - 20H 1M (Book Reserve - Audiobooks)<br>
 What Unites Us - Dan Rather - 7H 7M (Book Reserve - Audiobooks)<br>
@@ -842,7 +846,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 140 books - 1809H 42M / 75D 9H 42M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 76 books - 715H 9M / 29D 19H 9M<br>
+Completed in 2021 - 77 books - 721H 22M / 30D 1H 22M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -853,7 +857,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 118 books - 742H 10M / 30D 22H 10M<br>
+Book Reserve - Comic Trades - 122 books - 760H 18M / 31D 16H 18M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
  <br>
@@ -863,20 +867,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 171 queued items: 2293H 30M / 95D 13H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.78% of reserve items are queued<br>
+20.68% of reserve items are queued<br>
  <br>
-All books included in this report: 1232 titles - 14586H 27M / 607D 18H 27M<br>
+All books included in this report: 1237 titles - 14610H 48M / 608D 18H 48M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 409 titles - 4492H 57M / 187D 4H 57M<br>
-Total remaining in queue and reserve: 823 titles - 10093H 29M / 420D 13H 29M<br>
-Average completed per year: 46.2 titles - 507H 16M / 21D 3H 16M<br>
-Remaining years of reserve material at average yearly pace: 17.8<br>
-Remaining years of reserve material at current year pace: 9.4<br>
+Total completed since 01/01/2013: 410 titles - 4499H 10M / 187D 11H 10M<br>
+Total remaining in queue and reserve: 827 titles - 10111H 37M / 421D 7H 37M<br>
+Average completed per year: 46.3 titles - 507H 49M / 21D 3H 49M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.3<br>
  <br>
-Total time to process all reports: 00:00:01.614 (1.614 seconds)<br>
-Total time including file writes: 00:00:01.614 (1.614 seconds)
+Total time to process all reports: 00:00:01.803 (1.803 seconds)<br>
+Total time including file writes: 00:00:01.803 (1.803 seconds)
 </div>
 </body>
 </html>
